--- a/overview/integration-and-ecosystem/supported-platforms.mdx
+++ b/overview/integration-and-ecosystem/supported-platforms.mdx
@@ -1,223 +1,141 @@
 ---
-title: "Supported Platforms & Toolchains"
-description: "Summarizes the range of platforms, compilers, and environments supported by GoogleTest, pointing users to compatibility information and configuration tips for getting up and running in diverse scenarios."
+title: "Supported Platforms"
+description: "A summary of platforms, compilers, and build systems officially supported by GoogleTest, with guidance on compatibility policies and pointers to up-to-date support matrices."
 ---
 
-# Supported Platforms & Toolchains
+# Supported Platforms
 
-GoogleTest is designed as a robust, portable C++ testing framework that works seamlessly across a wide range of platforms, compilers, and development environments. This page summarizes its supported environments and provides essential guidance to help you configure and build GoogleTest successfully wherever your projects reside.
+GoogleTest is designed to provide a robust, portable C++ testing framework that works consistently across a wide range of platforms, compilers, and build systems. This page summarizes the officially supported platforms and compilers, outlines compatibility policies, and points users to the most up-to-date matrices and resources for detailed support information.
 
 ---
 
-## Compatibility and Platform Support
+## Why Platform Support Matters
 
-GoogleTest adheres to Google's [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support) and supports the major operating systems, compilers, and toolchains commonly used in modern C++ development. This makes it a versatile choice that integrates well into diverse development workflows.
+Ensuring your tests run reliably across different operating systems and compiler toolchains is critical for maintaining cross-platform codebases. GoogleTest's broad platform support helps developers:  
+
+- Focus on writing effective tests without worrying about portability issues.
+- Integrate testing seamlessly into existing build and CI systems.
+- Avoid platform-specific pitfalls when writing or running tests.
+
+As a user, understanding which environments are officially supported ensures you get maximum compatibility and access to community-tested configurations.
+
+---
+
+## Officially Supported Platforms and Compilers
+
+GoogleTest adheres to Google's [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support) to determine the platforms and compilers it supports. These supported environments are continuously updated to reflect modern industry standards and community needs.
 
 ### Supported Operating Systems
 
-- **Linux** (including various distributions and Linux on Android)
-- **Windows** (including Desktop, MinGW, and Windows Mobile variants)
-- **Mac OS X** and **iOS**
-- Other Unix-like systems such as FreeBSD, Solaris, AIX, and more
+GoogleTest works on:
 
-GoogleTest detects the platform automatically and enables platform-specific features accordingly, ensuring consistent behavior across environments.
+- **Linux** (including various distributions)
+- **Windows** (especially Windows Desktop and MinGW)
+- **macOS** (including iOS for testing on Apple platforms)
+- **FreeBSD**
+- **OpenBSD**
+- **QNX**
+- Other BSD variants where applicable
 
-### Supported Compilers
+Notably, some platforms like Fuchsia are either experimental or not officially supported.
 
-GoogleTest requires a compiler that supports at least **C++17**, ensuring modern language features and compatibility. Official support is provided for:
+### Compiler Support
 
-- **GCC** (GNU Compiler Collection)
-- **Clang**
-- **Microsoft Visual C++** (MSVC)
-- Other compilers with comparable C++17 support
+GoogleTest requires a modern C++17 capable compiler. Supported compilers generally include:
 
-Compiler detection automatically configures build flags to optimize compatibility, error handling, exception support, and RTTI (Run-Time Type Information).
+- GCC (version aligned with C++17 support)
+- Clang
+- MSVC (Visual Studio 2017 and later with C++17 support)
 
-### Build Tools and Environments
+Compiler support is closely tied to platform support to ensure stable builds and runtime behavior.
 
-GoogleTest integrates well with various build systems, notably:
+### Build Systems
 
-- **CMake:** GoogleTest ships with a comprehensive CMake build script that generates native build files (Makefiles, Visual Studio solutions, Xcode projects) usable on any supported platform.
-- **pkg-config:** Used for compiler and linker flag discovery, notably helpful in Linux and cross-compilation environments.
+GoogleTest officially supports integration with popular build environments:
 
-Harnessing these tools ensures straightforward builds, whether GoogleTest is a standalone library or embedded into your existing project.
-
----
-
-## Key Configuration Details
-
-### C++ Standard Requirement
-
-GoogleTest requires an environment supporting **C++17**. In CMake projects, you can ensure this by setting:
-
-```cmake
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-```
-
-Alternatively, for projects without direct C++ version control, specify compiler flags like `-DCMAKE_CXX_FLAGS="-std=c++17"`.
-
-### Thread Support
-
-GoogleTest is thread-safe when the **pthread** library is available, which is typical on Unix-like platforms. You can verify this at compile time using the `GTEST_IS_THREADSAFE` macro after including GoogleTest headers.
-
-If automatic detection fails, explicitly define the availability of pthreads by adding:
-
-```bash
--DGTEST_HAS_PTHREAD=1
-```
-
-or disable threading with:
-
-```bash
--DGTEST_HAS_PTHREAD=0
-```
-
-For pthread-based builds not using CMake, add necessary compiler and linker flags (`-pthread`) manually.
-
-### Visual Studio Runtime Compatibility
-
-On Windows, GoogleTest by default links the C runtime statically, which can conflict with projects that use dynamic runtime libraries. To resolve this, enable the `gtest_force_shared_crt` option in your CMake command:
-
-```bash
-cmake .. -Dgtest_force_shared_crt=ON
-```
-
-This synchronizes runtime linkage and prevents linker errors related to mismatched runtimes.
-
-### Building as Shared or Static Libraries
-
-GoogleTest can be built as either a static or shared library. By default, static linking is used for simplicity.
-
-To build GoogleTest as a shared library, compile with the flag:
-
-```bash
--DGTEST_CREATE_SHARED_LIBRARY=1
-```
-
-And when compiling your test executables to link against the shared library, add:
-
-```bash
--DGTEST_LINKED_AS_SHARED_LIBRARY=1
-```
-
-It's recommended to always include these flags when using shared libraries to avoid breaking builds on future updates.
-
-### Avoiding Macro Name Clashes
-
-If your codebase or other libraries use macros with names conflicting with GoogleTest's macros (e.g., `TEST`, `ASSERT_EQ`), you can instruct GoogleTest to rename its macros by defining:
-
-```bash
--DGTEST_DONT_DEFINE_TEST=1
-```
-
-This changes the macro `TEST` to `GTEST_TEST`, preventing clashes while allowing continued use of GoogleTest’s facilities.
+- **CMake:** The primary community-supported build method, works across all major platforms.
+- **Bazel:** GoogleTest provides native Bazel build configurations matching supported platforms.
+- **Makefiles and other systems:** Via CMake or manual configuration, GoogleTest can be included in diverse build setups.
 
 ---
 
-## Building GoogleTest
+## Compatibility Policies
 
-### Standalone Build with CMake
+### C++ Standard
 
-A simple process to build GoogleTest independently:
+GoogleTest requires at least C++17. This ensures access to modern language features and guarantees compatibility with the standard library behaviors assumed throughout GoogleTest's codebase.
 
-```bash
-git clone https://github.com/google/googletest.git -b v1.17.0
-cd googletest
-mkdir build
-cd build
-cmake ..
-make
-sudo make install
-```
+### Threading Support
 
-If you want to build only GoogleTest without GoogleMock, use:
+- GoogleTest is thread-safe on platforms where `pthreads` are available and enabled.
+- On Windows, thread safety is supported using native threading APIs.
+- For environments lacking thread support, GoogleTest falls back to a single-threaded mode with limited capabilities.
 
-```bash
-cmake .. -DBUILD_GMOCK=OFF
-```
+### Runtime Libraries and Options
 
-On Windows with Visual Studio installed, the `cmake` command will generate `.sln` and project files for easy building.
-
-On Mac OS X, Xcode project files will be generated similarly.
-
-### Incorporating GoogleTest into Existing CMake Projects
-
-You can add GoogleTest’s source to your build using `add_subdirectory()` or use `find_package(GTest CONFIG REQUIRED)` if GoogleTest is installed system-wide.
-
-Example snippet to include GoogleTest using `FetchContent`:
-
-```cmake
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
-)
-
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)  # On Windows
-FetchContent_MakeAvailable(googletest)
-
-add_executable(example example.cpp)
-target_link_libraries(example gtest_main)
-add_test(NAME example_test COMMAND example)
-```
-
-This approach ensures compiler and linker settings remain consistent.
+- On Windows, GoogleTest provides options to choose between static and dynamic runtime libraries to prevent linking conflicts.
+- Users can tweak threading and linking behavior via compiler flags, adapting GoogleTest to their environment.
 
 ---
 
-## Cross-Compilation and pkg-config
+## Checking Up-to-Date Platform Support
 
-GoogleTest supports cross-compilation scenarios, and `pkg-config` files can help manage include paths and linking flags.
+Due to frequent changes in compilers, OS versions, and IDEs, the authoritative up-to-date source for detailed platform and compiler compatibility is the [Foundational C++ Support Matrix](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md).
 
-To use pkg-config correctly in cross-compilation, set the environment variables to point to your sysroot:
+This matrix provides:
+- Verified versions of compilers supported per OS
+- Supported build tools and versions
+- Notes on deprecations, exceptions, or partial support
 
-```bash
-export PKG_CONFIG_SYSROOT_DIR=/path/to/sysroot
-export PKG_CONFIG_LIBDIR=${PKG_CONFIG_SYSROOT_DIR}/usr/lib64/pkgconfig
-```
-
-This injects the appropriate system roots into compiler and linker flags, avoiding path mismatches.
-
-An example snippet for using pkg-config in CMake is:
-
-```cmake
-find_package(PkgConfig)
-pkg_search_module(GTEST REQUIRED gtest_main)
-
-target_sources(testapp PRIVATE samples/sample3_unittest.cc)
-target_link_libraries(testapp PRIVATE ${GTEST_LDFLAGS})
-target_compile_options(testapp PRIVATE ${GTEST_CFLAGS})
-
-enable_testing()
-add_test(first_and_only_test testapp)
-```
-
-If `pkg-config` cannot find GoogleTest, ensure the `.pc` files exist and that `PKG_CONFIG_PATH` includes their directory.
+We highly recommend consulting this matrix before setting up your testing environment to ensure full compatibility.
 
 ---
 
-## Troubleshooting Tips
+## Practical Integration Tips
 
-- **Compiler Errors Due to C++ Standard:** Ensure your build environment uses at least C++17.
-- **Linker Errors on Windows:** Use `-Dgtest_force_shared_crt=ON` to align runtime libraries.
-- **Threading Issues:** Verify pthread support or disable it explicitly.
-- **Macro Name Collisions:** Use `-DGTEST_DONT_DEFINE_*` macros to rename GoogleTest macros.
-- **Pkg-config Failures:** Check environment variables and `.pc` file locations.
+- **Use CMake for Cross-Platform Builds:** GoogleTest ships with a comprehensive CMakeLists.txt that handles platform-specific concerns, compiler flags, and installation.
 
-For detailed build issues, consult the [GoogleTest GitHub issues](https://github.com/google/googletest/issues) and community forums.
+- **Leverage Package Managers:** Some platforms provide GoogleTest packages that adhere to these compatibility notes.
 
----
+- **Manual Adjustments for Special Environments:** When building on less common configurations (e.g., embedded systems), be prepared to define or override threading or feature macros like `GTEST_HAS_PTHREAD`.
 
-## Summary
-
-GoogleTest offers wide platform and toolchain support, backed by automatic configuration and flexible integration options. Whether building standalone, embedding into an existing project, or cross-compiling for custom environments, this page guides you through the compatibility landscape and practical setup details. With comprehensive support for modern C++ standards, threading, shared/static linkage, and common build systems, GoogleTest is ready to empower your C++ testing needs on virtually any platform.
+- **Stay Updated:** Follow the GoogleTest GitHub repository and changelogs for any updates to platform support or major policy changes.
 
 ---
 
-For further reading, see:
+## Common Questions
 
-- [GoogleTest Primer](../getting-started/first-test-and-validation/quickstart-primer)
-- [Installing with CMake](../getting-started/installation-and-configuration/installing-googletest-cmake)
-- [Using GoogleTest from Build Systems with pkg-config](../docs/pkgconfig.md)
-- [Known Limitations and Platform Notes](../overview/integration-and-ecosystem/supported-platforms)
+<AccordionGroup title="Common Platform Support Questions">
+<Accordion title="Does GoogleTest support macOS/iOS?">
+Yes, GoogleTest fully supports macOS desktop platforms with C++17-enabled compilers. iOS is also supported, enabling testing within Apple mobile development environments.
+</Accordion>
+<Accordion title="What if my platform is not officially supported?">
+GoogleTest might still compile and run, but without official guarantees. For critical projects, consider using supported platforms or contributing patches if you require official support.
+</Accordion>
+<Accordion title="Can I use GoogleTest with older C++ standards?">
+No, GoogleTest requires C++17 due to language features it depends on. Using older standards may lead to build errors or unstable behavior.
+</Accordion>
+</AccordionGroup>
+
+---
+
+## Next Steps
+
+To proceed with integrating GoogleTest in your environment, consider:
+
+- Reviewing the detailed [Getting Started with GoogleTest](https://github.com/google/googletest/tree/main/docs) guides.
+- Examining the [Installation & Setup](../../../getting-started/installation-setup/installation-methods) documentation for build instructions targeting your platform.
+- Consulting the [pkg-config](../../docs/pkgconfig.md) guide for advanced build system integration tricks.
+
+With a clear understanding of your supported platform and compiler, you are well positioned to reliably incorporate GoogleTest and reap the benefits of systematic, portable C++ testing.
+
+---
+
+## References
+
+- [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support)
+- [Platform Support Matrix (GitHub)](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md)
+- [GoogleTest GitHub Repository](https://github.com/google/googletest)
+- GoogleTest CMake Build Documentation ([CMakeLists.txt](https://github.com/google/googletest/blob/main/CMakeLists.txt))
+
+---
